--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/fullcalendar@6.1.15/index.global.min.js"></script>
     <link rel="stylesheet" href="./src/css/style.css">
+    <link rel="shortcut icon" href="./public/icons8-journal-94.png" type="image/x-icon">
 </head>
 <body class="bg-gray-50 min-h-screen font-sans" data-theme="light">
   <div class="container mx-auto px-8 sm:px-[8%] py-4 sm:py-8">
@@ -134,7 +135,7 @@
                     </div>
                 </div>
                 
-                <div class="px-3 sm:px-6 py-3 border-b border-gray-200 bg-gray-50 overflow-x-auto">
+                <div class="px-3 sm:px-6 py-3 border-b border-gray-200 bg-gray-50 overflow-x-auto no-scrollbar">
                     <div class="flex flex-nowrap gap-2 min-w-max">
                         <button class="mood-filter-btn px-2 sm:px-3 py-1 border rounded-full text-sm flex items-center" data-mood="all">
                             <i class="fas fa-star"></i>
