fix: overflow scrolls

--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
                     </div>
                 </div>
                 
-                <div id="entries-view">
-                    <div id="entries-container" class="divide-y divide-gray-200 max-h-[60vh] sm:max-h-[calc(100vh-300px)] overflow-y-auto">
+                <div id="entries-view no-scrollbar">
+                    <div id="entries-container no-scrollbar" class="divide-y divide-gray-200 max-h-[60vh] sm:max-h-[calc(100vh-300px)] overflow-y-auto">
                         <div class="p-4 sm:p-6 text-center text-gray-500" id="no-entries">
                             <i class="fas fa-book-open text-4xl mb-2 text-gray-300"></i>
                             <p>No entries yet. Start writing your first journal entry!</p>
